--- a/styles/index.css
+++ b/styles/index.css
@@ -80,12 +80,19 @@ div.sub-faction-container{
 
 /* style du caroussel de photos */
 
+.carousel-item{
+    width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
 img.carousel{
-    display: block;
+    /* display: block;
   max-width:100%;
-  max-height:500px;
-  width: auto;
-  height: auto;
+  max-height:500px; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   margin: auto;
 }
 
