--- a/styles/projets.css
+++ b/styles/projets.css
@@ -71,3 +71,22 @@ figure {
   .choix-affichage.active {
     display: block;
   }
+
+  /* Team card ========== */
+  .card-equipe{
+    max-width: 200px;
+    background-color: rgba(196, 196, 196, 0.05);
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+    margin-bottom: 25px;
+    margin: 30px;
+}
+
+.card-equipe img{ 
+    width: 200px;
+    height: 200px;
+    object-fit:cover;
+}
+
+.grid-team{
+    text-align: center;
+}
