--- a/styles/base.css
+++ b/styles/base.css
@@ -70,6 +70,23 @@ div.global-container{
     color: #e09108;
   }
 
+  .card-equipe{
+    background-color: #d9d9d9;
+    max-width: 200px;
+    box-shadow: 0 4px 8px 0 rgba(255, 255, 255, 0.2), 0 6px 20px 0 rgba(255, 255, 255, 0.19);
+    margin-bottom: 25px;
+    margin: 30px;
+}
+
+.card-equipe img{ 
+    width: 200px;
+    height: 200px;
+    object-fit:cover;
+}
+.equipe{
+  margin-top: 90px;
+  text-align: center;
+}
 
   
   
