--- a/styles/base.css
+++ b/styles/base.css
@@ -115,3 +115,8 @@ button a{
   color: #FFFFFF;
   text-decoration: none;  
 }
+
+button a:hover{
+  color: #FFFFFF;
+  text-decoration: underline;  
+}
