--- a/styles/projets.css
+++ b/styles/projets.css
@@ -17,16 +17,9 @@
     grid-row: 2;
 }
 
-/* .choice svg path{
-    width: 100%;
-    height: 100%;
+[class*="lists_item"]{
+  cursor: pointer;
 }
-
-
-button.choix-affichage {
-    width: 100%;
-    height: 100%;
-} */
 
 /* Base styles ========== */
 figure {
@@ -94,3 +87,136 @@ figure {
 .card-container .card{
   cursor: pointer;
 }
+
+/* Modal de détail du projet*/
+#modal-detail-projet {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  backdrop-filter: blur(10px);
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+.modal-container {
+  position: relative;
+  width: 86%;
+  height: 86%;
+  margin: auto;
+  margin-top: 5%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+  display: grid;
+  grid-template-columns: 40% 30% 25% 5%;
+  grid-template-rows: 10% 85% 5% ;
+}
+
+.modal.description {
+  display: block;
+  position: absolute;
+  background-color: #D9D9D9;
+  grid-column: 1 / 3;
+  grid-row: 1 / 3;
+}
+
+.modal.description .text{
+  display: block;
+  position: absolute;
+  /* background-color: #a15050; */
+  width: 50%;
+  height: 95%;
+  margin-top: 3%;
+  margin-left: 3%;
+}
+
+.modal.description .text h1{
+  text-align: center;
+  color: #e09108;
+}
+
+.modal.description .text h2{
+  margin-top: 20px;
+  text-align: center;
+  color: #000000;
+}
+
+.modal.description .text p{
+  margin-top: 40px;
+  color: #000000;
+}
+
+.modal.photo {
+  display: block;
+  position: absolute;
+  background-color: rgb(233, 233, 233);
+  grid-column: 2 / 5;
+  grid-row: 2 / 4;
+  box-shadow: 10px 10px 10px #000000;
+}
+
+#carouselExampleAutoplaying{
+  height: 100%;
+}
+
+.carousel-item{
+  overflow: hidden;
+}
+
+img.carousel{
+  /* display: block;
+max-width:100%;
+max-height:500px; */
+width: 100%;
+height: 100%;
+object-fit: cover;
+margin: auto;
+}
+.modal.close {
+  display: flex;
+  position: absolute;
+  z-index: 10000;
+  font-size: 30px;
+  font-weight: 700;
+  color: #e09108;
+  grid-column: 4 / 5;
+  grid-row: 1 / 2;
+}
+
+.modal.close p{
+  margin-top: 10px;
+  margin-left: 30%;
+}
+
+#modal-close{
+  cursor: pointer;
+}
+
+/* .modal h2{
+  background-color: white;
+  padding: 20px;
+  border-radius: 5px;
+  max-width: 80%;
+  max-height: 80%;
+  overflow-y: auto;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+}
+
+.close-modal {
+  border: none;
+  background-color: transparent;
+  font-size: 20px;
+  cursor: pointer;
+}
+
+.modal-body img {
+  max-width: 100%;
+  height: auto;
+  margin-top: 10px;
+} */
