--- a/styles/card.css
+++ b/styles/card.css
@@ -36,3 +36,11 @@
   margin: 2%;
   border-radius: 25px;
 }
+
+.visu {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
