--- a/styles/detailProjet.css
+++ b/styles/detailProjet.css
@@ -1,38 +1,101 @@
+@font-face {
+  font-family: "Foundation";
+  src: url("../assets/fonts/FoundationTitlesHand-v0.85.ttf");
+}
+
+p {
+  font-size: 1.9rem;
+}
+
+h5 {
+  font-size: 1.7rem;
+}
+
 .main-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 5%;
-  }
-  
-  .container {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    /* background-color: #00000064; */
-    align-items: center;
-  }
-  
-  .description {
-    width: 40%;
-    padding: 6% 10%;
-    display: flex;
-    height: 95%;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-around;
-  }
-  .principal {
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .imgcard {
-    width: 70%;
-    margin: 2%;
-    border-radius: 25px;
-  }
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 5%;
+}
+
+h2 {
+  font-family: "Foundation";
+  font-size: 3rem;
+}
+
+.card-description {
+  width: 50vw;
+}
+
+.container {
+  height: 100%;
+  padding-top: 5%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.description {
+  width: 40%;
+  display: flex;
+  height: 95%;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: space-around;
+}
+.principal {
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  margin-bottom: 5%;
+}
+
+.imgcard {
+  height: auto;
+  width: 100%;
+  border-radius: 25px;
+}
+
+#card-image {
+  display: flex;
+  align-items: center;
+  width: 50%;
+}
+
+.visu,
+.chara,
+.inspi {
+  width: 100%;
+  height: 50%;
+  align-self: center;
+  display: flex;
+  align-items: center;
+  margin: 1%;
+  border-radius: 20px;
+}
+
+#CharaDesign,
+#Inspiration,
+#Visualisation {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 5%;
+}
+
+#card-title {
+  color: #e09108;
+}
+
+span {
+  color: #e09108;
+}
+#CharaDesign img,
+#Inspiration img,
+#Visualisation img {
+  width: 40%;
+}
