--- a/styles/common/header.css
+++ b/styles/common/header.css
@@ -5,7 +5,7 @@ header {
     align-items: center;
     padding: 10px;
     height: 80px;
-    background-color: var(--color-test);
+    background-color: var(--primary-color);
     box-shadow: 0px 2px 5px rgba(00, 00, 00, 0.5);
 }
 
