--- a/styles/common/colors.css
+++ b/styles/common/colors.css
@@ -3,12 +3,12 @@
    --secondary-color: #ffffff;
    --background-color: #ffffff;
 
-   --button-border-color: #ffffff;
+   --button-border-color: #E09108;
    --button-background-color: #ffffff;
 
-   --year-2023: #ffffff;
-   --year-2022: #ffffff;
-   --year-2021: #ffffff;
+   --year-2023: #A60303;
+   --year-2022: #9A00C4;
+   --year-2021: #E09108;
 
    --text-color: #ffffff;
 }
