--- a/styles/common/footer.css
+++ b/styles/common/footer.css
@@ -24,6 +24,8 @@ footer .logo-wrapper>img {
 
 footer p {
     color: #ffffff;
+    text-align: center;
+    padding: 0 10px;
 }
 
 footer .social-media-wrapper {
