--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,11 @@
     --main-color-2021: #E09108;
     --main-color-2022: #9A00C4;
     --main-color-2023: #A60303;
-    --main-color-background: #292929;
+
+}
+
+body {
+    position: relative;
 }
 
 body,
@@ -17,17 +21,17 @@ h6 {
 }
 
 main {
-    position:relative;
+    position: relative;
     background-color: var(--main-color-background);
     color: #ffffff;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .background-image {
-    position:relative;
-    width:100%;
-    height:400px;
-    overflow:hidden;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
 }
 
 .background-image img {
@@ -51,18 +55,19 @@ main {
 }
 
 @keyframes displayCaroussel {
-    0%{
-        transform:translateX(100%);
-        opacity:0;
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
     }
 
-    20%{
-        transform:translateX(0);
-        opacity:1;
+    20% {
+        transform: translateX(0);
+        opacity: 1;
     }
-    50%{
-        transform:translateX(0);
-        opacity:0;
+
+    50% {
+        transform: translateX(0);
+        opacity: 0;
     }
 }
 
@@ -115,16 +120,16 @@ section h3 {
     justify-content: center;
     gap: 15px;
     height: 200px;
-    width:200px;
+    width: 200px;
     padding: 15px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .projects-examples-list img {
     position: absolute;
     left: calc(50%-100px);
     max-height: 200px;
-    border-radius:10px;
+    border-radius: 10px;
     opacity: 0;
     animation: displayProjects 10s infinite;
 }
@@ -181,7 +186,7 @@ section h3 {
     transform: translate(-50%, -50%);
     padding: 10px;
     width: 150px;
-    height: 20px;
+    height: auto;
     border: solid 1px var(--main-color-2021);
     border-radius: 8px;
     background-color: var(--main-color-background);
@@ -203,9 +208,9 @@ section h3 {
     top: 0;
     left: 0;
     height: 100%;
-    width:100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    border-radius:25px;
+    border-radius: 25px;
     transition: 0.5s ease-in;
 }
 
@@ -217,9 +222,9 @@ section h3 {
     opacity: 1;
 }
 
-.disabled{
-    color:rgba(0, 0, 0, 0.25);
-    border:solid 1px rgba(0,0,0,0.25);
+.disabled {
+    color: rgba(0, 0, 0, 0.25);
+    border: solid 1px rgba(0, 0, 0, 0.25);
     pointer-events: none;
 }
 
@@ -230,7 +235,7 @@ section h3 {
     cursor: pointer;
     position: sticky;
     bottom: 75px;
-    left:20px;
+    left: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -253,4 +258,21 @@ section h3 {
 
 .arrow-to-top:hover span {
     color: var(--main-color-background);
+}
+
+@media screen and (max-width:600px) {
+
+    section p {
+        max-width: 600px;
+        white-space: normal !important;
+    }
+
+    .background-image {
+        height: 100px;
+    }
+
+    .background-image img {
+        width: 700px;
+    }
+
 }
