--- a/styles/index.css
+++ b/styles/index.css
@@ -17,17 +17,17 @@ h6 {
 }
 
 main {
-    position:relative;
+    position: relative;
     background-color: var(--main-color-background);
     color: #ffffff;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .background-image {
-    position:relative;
-    width:100%;
-    height:400px;
-    overflow:hidden;
+    position: relative;
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
 }
 
 .background-image img {
@@ -51,18 +51,19 @@ main {
 }
 
 @keyframes displayCaroussel {
-    0%{
-        transform:translateX(100%);
-        opacity:0;
+    0% {
+        transform: translateX(100%);
+        opacity: 0;
     }
 
-    20%{
-        transform:translateX(0);
-        opacity:1;
+    20% {
+        transform: translateX(0);
+        opacity: 1;
     }
-    50%{
-        transform:translateX(0);
-        opacity:0;
+
+    50% {
+        transform: translateX(0);
+        opacity: 0;
     }
 }
 
@@ -115,16 +116,16 @@ section h3 {
     justify-content: center;
     gap: 15px;
     height: 200px;
-    width:200px;
+    width: 200px;
     padding: 15px;
-    overflow:hidden;
+    overflow: hidden;
 }
 
 .projects-examples-list img {
     position: absolute;
     left: calc(50%-100px);
     max-height: 200px;
-    border-radius:10px;
+    border-radius: 10px;
     opacity: 0;
     animation: displayProjects 10s infinite;
 }
@@ -203,9 +204,9 @@ section h3 {
     top: 0;
     left: 0;
     height: 100%;
-    width:100%;
+    width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    border-radius:25px;
+    border-radius: 25px;
     transition: 0.5s ease-in;
 }
 
@@ -217,9 +218,9 @@ section h3 {
     opacity: 1;
 }
 
-.disabled{
-    color:rgba(0, 0, 0, 0.25);
-    border:solid 1px rgba(0,0,0,0.25);
+.disabled {
+    color: rgba(0, 0, 0, 0.25);
+    border: solid 1px rgba(0, 0, 0, 0.25);
     pointer-events: none;
 }
 
@@ -230,7 +231,7 @@ section h3 {
     cursor: pointer;
     position: sticky;
     bottom: 75px;
-    left:20px;
+    left: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
