--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,10 +1,3 @@
-:root {
-    --main-color-2021: #E09108;
-    --main-color-2022: #9A00C4;
-    --main-color-2023: #A60303;
-    --main-color-background: #292929;
-}
-
 body,
 p,
 h1,
@@ -14,23 +7,30 @@ h4,
 h5,
 h6 {
     margin: 0;
+    color: var(--text-color);
 }
 
-body{
-    position:relative;
+body {
+    position: relative;
 }
+
 .hidden {
-    display: none;
+    display: none !important;
 }
 
 main {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    background-color: var(--main-color-background);
+    background-color: var(--background-color);
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 section {
+    flex: 1;
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 20px;
 }
 
@@ -38,7 +38,8 @@ section h3 {
     font-size: 40px;
     font-weight: 500;
     text-align: center;
-    color: #ffffff;
+    color: var(--text-color);
+    ;
 }
 
 .search-wrapper {
@@ -46,6 +47,7 @@ section h3 {
     align-items: center;
     justify-content: center;
     gap: 50px;
+    max-width: 95vw;
 }
 
 .searchbar {
@@ -84,25 +86,22 @@ section h3 {
     border: solid 1px #FFFFFF;
     border-radius: 20px;
     transition: 0.25s ease-in-out;
-    color: #ffffff;
+    color: var(--text-color);
     opacity: 0.75;
     cursor: pointer;
     font-size: 14px;
 }
 
 .filter-item#year-2021:hover {
-    border: solid 1px var(--main-color-2021);
-    color: var(--main-color-2021);
+    background-color: #ffffff11;
 }
 
 .filter-item#year-2022:hover {
-    border: solid 1px var(--main-color-2022);
-    color: var(--main-color-2022);
+    background-color: #ffffff11;
 }
 
 .filter-item#year-2023:hover {
-    border: solid 1px var(--main-color-2023);
-    color: var(--main-color-2023);
+    background-color: #ffffff11;
 }
 
 .filter-item.selected {
@@ -110,32 +109,40 @@ section h3 {
 }
 
 .filter-item.selected#year-2021 {
-    border: solid 1px var(--main-color-2021);
-    color: var(--main-color-2021);
+    border: solid 1px var(--year-2021);
+    color: var(--year-2021);
 }
 
 .filter-item.selected#year-2022 {
-    border: solid 1px var(--main-color-2022);
-    color: var(--main-color-2022);
+    border: solid 1px var(--year-2022);
+    color: var(--year-2022);
 }
 
 .filter-item.selected#year-2023 {
-    border: solid 1px var(--main-color-2023);
-    color: var(--main-color-2023);
+    border: solid 1px var(--year-2023);
+    color: var(--year-2023);
+}
+
+.no-result {
+    color: var(--text-color);
+    font-size: 25px;
 }
 
 .project-wrapper {
+    flex: 1;
     display: flex;
     justify-content: center;
-    align-items:center;
+    align-items: center;
     flex-wrap: wrap;
-    gap:25px;
+    gap: 25px;
+    max-width: 95%;
 }
 
 .project {
-    cursor:pointer;
-    height: 250px;
-    width: 250px;
+    cursor: pointer;
+    min-height: 250px;
+    min-width: 250px;
+    flex: 1;
     border: solid 1px transparent;
     border-radius: 10px;
     background-position: center center;
@@ -145,36 +152,131 @@ section h3 {
     overflow: hidden;
 }
 
-.project:hover{
-    transform:scale(1.02);
+.project:hover {
+    transform: scale(1.02);
 }
 
-.arrow-to-top {
-    z-index:5;
-    cursor:pointer;
-    position:sticky;
-    bottom: 75px;
-    left: 20px;
-    display:flex;
-    align-items:center;
+.project-lightbox {
+    z-index: 4;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    gap: 15px;
+    height: 75%;
+    width: 75%;
+    padding: 20px;
+    border-radius: 8px;
+    background-color: var(--background-color);
+    overflow: hidden;
+    box-shadow: 0 0 5px 0 #ffffff55;
+}
+
+.project-lightbox .btn-close {
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    cursor: pointer;
+    color: var(--text-color);
+}
+
+.project-lightbox .img-wrapper {
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    height:25px;
-    width:25px;
-    border: solid 1px #ffffff;
-    border-radius: 100%;
-    box-shadow:0px 0px 1px 1px rgba(0,0,0,0.5);
-    transition:0.2s;
+    gap: 25px;
 }
 
-.arrow-to-top span{
-    font-size:18px;
-    color: #ffffff;
+.project-lightbox .img-wrapper .big-img {
+    max-width: 600px;
+    max-height: 100%;
+    border-radius: 2px;
 }
 
-.arrow-to-top:hover{
-    background-color:#ffffff;
+.project-lightbox .mini-img-list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    max-height: 100%;
+    width: 75px;
+    overflow-y: auto;
 }
 
-.arrow-to-top:hover span{
-    color:var(--main-color-background);
+.project-lightbox .mini-img {
+    cursor: pointer;
+    width: 100%;
+    border-radius: 2px;
+    opacity: 0.5;
+    transition: 0.5s
+}
+
+.project-lightbox .mini-img:hover {
+    opacity: 0.75;
+}
+
+.project-lightbox .info-wrapper {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
+    font-size: 20px;
+}
+
+.project-lightbox .info-wrapper .info {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 25px;
+}
+
+.project-lightbox .info-wrapper h4 {
+    font-size: 40px;
+    text-align: center;
+}
+
+.project-lightbox-background {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--background-color);
+    opacity: 0.5;
+    cursor: pointer;
+}
+
+@media screen and (max-width:600px) {
+    .search-wrapper {
+        flex-direction: column;
+        gap: 25px;
+    }
+
+    .project-wrapper {
+        max-width: 65%;
+    }
+
+    .project-lightbox {
+        flex-direction: column;
+    }
+
+    .project-lightbox .img-wrapper {
+        max-width: 100%;
+        height: 50%;
+    }
+
+    .project-lightbox .mini-img-list {
+        flex-direction: row;
+        width: 100%;
+        max-height: 100px;
+        overflow-y: hidden;
+        overflow-x: auto;
+    }
+
+    .project-lightbox .info-wrapper {
+        gap: 20px;
+    }
+
 }
