--- a/styles/about.css
+++ b/styles/about.css
@@ -1,10 +1,3 @@
-:root {
-    --main-color-2021: #E09108;
-    --main-color-2022: #9A00C4;
-    --main-color-2023: #A60303;
-    --main-color-background: #292929;
-}
-
 body,
 p,
 h1,
@@ -14,12 +7,14 @@ h4,
 h5,
 h6 {
     margin: 0;
+    color: var(--text-color);
 }
 
 main {
     position: relative;
-    background-color: var(--main-color-background);
+    background-color: var(--background-color);
     color: #ffffff;
+    min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 section {
@@ -32,29 +27,34 @@ section {
 }
 
 section h3 {
-    margin-bottom:15px;
-    font-size: 40px;
+    margin-bottom: 15px;
+    font-size: 50px;
     font-weight: 500;
     text-align: center;
 }
 
 section h3 span {
-    color: var(--main-color-2021);
+    color: var(--year-2021);
 }
 
 section h4 {
-    font-size: 25px;
+    font-size: 30px;
     font-weight: 400;
 }
 
 section p {
     font-size: 18px;
-    line-height: 120%;
+    line-height: 150%;
 }
 
 section li {
     list-style: none;
+    font-size: 18px;
     margin-bottom: 15px;
+}
+
+.print-techniques li {
+    margin-bottom: 5px;
 }
 
 .project-steps .step h4 {
@@ -90,74 +90,65 @@ section li {
     list-style: circle;
 }
 
-.printing-duration{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+.printing-duration {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .printing-duration li {
     width: 80%;
 }
 
-.printing-manual{
-    display:flex;
-    flex-direction:column;
-    align-items:center;
+.printing-manual {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
-.printing-manual p{
-    margin-bottom:15px;
+.printing-manual p {
+    margin-bottom: 15px;
 }
 
-.download-btn{
-    cursor:pointer;
-    display:flex;
-    align-items:center;
-    justify-content:center;
-    padding:10px;
-    width:fit-content;
-    color:#ffffff;
-    border:solid 1px var(--main-color-2021);
-    border-radius:8px;
-    text-decoration: none;
-    transition:0.2s;
-}
-
-.download-btn:hover{
-    background-color: var(--main-color-2021);
-}
-
-.download-btn span{
-    margin-left:5px;
-}
-
-.arrow-to-top {
-    z-index: 5;
+.download-btn {
     cursor: pointer;
-    position: sticky;
-    bottom: 75px;
-    left: 20px;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 25px;
-    width: 25px;
-    border: solid 1px #ffffff;
-    border-radius: 100%;
-    box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    width: fit-content;
+    color: var(--text-color);
+    ;
+    border: solid 1px var(--year-2021);
+    border-radius: 8px;
+    font-size: 18px;
+    text-decoration: none;
     transition: 0.2s;
 }
 
-.arrow-to-top span {
-    font-size: 18px;
-    color: #ffffff;
+.download-btn:hover {
+    background-color: var(--year-2021);
 }
 
-.arrow-to-top:hover {
-    background-color: #ffffff;
+.download-btn span {
+    margin-left: 5px;
 }
 
-.arrow-to-top:hover span {
-    color: var(--main-color-background);
+@media screen and (max-width:600px) {
+    .software-logo_wrapper {
+        max-width: 500px;
+        flex-wrap: wrap;
+    }
+
+    .download-btn {
+        background-color: var(--year-2021);
+    }
+
+    .section ul {
+        padding: 0;
+    }
+
+    .figurine-complexity {
+        padding: 0;
+    }
 }
