--- a/styles/common/footer.css
+++ b/styles/common/footer.css
@@ -1,9 +1,13 @@
+:root {
+    --footer-height: 50px;
+}
+
 footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 10px 20px;
-    height: 50px;
+    height: var(--footer-height);
     background-color: var(--primary-color);
     box-shadow: 0px 2px 5px rgba(00, 00, 00, 0.5);
 }
@@ -23,7 +27,10 @@ footer .logo-wrapper>img {
 }
 
 footer p {
-    color: #ffffff;
+    color: var(--text-color);
+    font-size: 18px;
+    text-align: center;
+    padding: 0 10px;
 }
 
 footer .social-media-wrapper {
@@ -41,4 +48,10 @@ footer .artStation_Logo img {
 footer .instagram_Logo img:hover,
 footer .artStation_Logo img:hover {
     transform: scale(1.1, 1.1)
+}
+
+@media screen and (max-width:600px) {
+    footer>p {
+        padding: 0 20px;
+    }
 }
