--- a/styles/teams.css
+++ b/styles/teams.css
@@ -1,10 +1,3 @@
-:root{
-   --main-color-2021:#E09108;
-   --main-color-2022:#9A00C4;
-   --main-color-2023:#A60303;
-   --main-color-background:#292929;
-}
-
 body,
 p,
 h1,
@@ -17,15 +10,18 @@ h6 {
 }
 
 .hidden {
-   display: none;
+   display: none !important;
 }
 
 main {
-   height: 100%;
-   background-color:var(--main-color-background);
+   display: flex;
+   flex-direction: column;
+   background-color: var(--background-color);
+   min-height: calc(100vh - var(--header-height) - var(--footer-height));
 }
 
 section {
+   flex: 1;
    display: flex;
    flex-direction: column;
    gap: 20px;
@@ -35,7 +31,7 @@ section h3 {
    font-size: 40px;
    font-weight: 500;
    text-align: center;
-   color: #ffffff;
+   color: var(--text-color);
 }
 
 .search-wrapper {
@@ -48,8 +44,8 @@ section h3 {
 .searchbar {
    display: flex;
    align-items: center;
-   height: 30px;
-   min-width: 400px;
+   height: 40px;
+   min-width: 450px;
    border: solid 1px #ffffff;
    border-radius: 8px;
    background-color: #ffffff;
@@ -60,10 +56,11 @@ section h3 {
 }
 
 #searchbar {
-   width: 90%;
+   width: 100%;
    padding: 5px;
    border: none;
    border-radius: 8px;
+   font-size: 16px;
 }
 
 #searchbar:focus {
@@ -84,22 +81,22 @@ section h3 {
    color: #ffffff;
    opacity: 0.75;
    cursor: pointer;
-   font-size: 14px;
+   font-size: 18px;
 }
 
 .filter-item#year-2021:hover {
-   border: solid 1px var(--main-color-2021);
-   color: var(--main-color-2021);
+   border: solid 1px var(--year-2021);
+   color: var(--year-2021);
 }
 
 .filter-item#year-2022:hover {
-   border: solid 1px var(--main-color-2022);
-   color: var(--main-color-2022);
+   border: solid 1px var(--year-2022);
+   color: var(--year-2022);
 }
 
 .filter-item#year-2023:hover {
-   border: solid 1px var(--main-color-2023);
-   color: var(--main-color-2023);
+   border: solid 1px var(--year-2023);
+   color: var(--year-2023);
 }
 
 .filter-item.selected {
@@ -107,51 +104,71 @@ section h3 {
 }
 
 .filter-item:hover#year-2021 {
-   background-color: var(--main-color-2021);
-   color: #ffffff !important;
+   background-color: #ffffff11;
 }
 
 .filter-item:hover#year-2022 {
-   background-color: var(--main-color-2022);
-   color: #ffffff !important;
+   background-color: #ffffff11;
 }
 
 .filter-item:hover#year-2023 {
-   background-color: var(--main-color-2023);
-   color: #ffffff !important;
+   background-color: #ffffff11;
 }
 
 .filter-item.selected#year-2021 {
-   border: solid 1px var(--main-color-2021);
-   color: var(--main-color-2021);
+   border: solid 1px var(--year-2021);
+   color: var(--year-2021);
 }
 
 .filter-item.selected#year-2022 {
-   border: solid 1px var(--main-color-2022);
-   color: var(--main-color-2022);
+   border: solid 1px var(--year-2022);
+   color: var(--year-2022);
 }
 
 .filter-item.selected#year-2023 {
-   border: solid 1px var(--main-color-2023);
-   color: var(--main-color-2023);
+   border: solid 1px var(--year-2023);
+   color: var(--year-2023);
 }
 
-.team-wrapper {}
-
-.team {}
-
-.team-year {
-   text-align: center;
-   color: #ffffff;
+.no-result {
+   color: var(--text-color);
    font-size: 25px;
 }
 
+.team {
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+   gap: 15px;
+}
+
+.team-wrapper {
+   flex: 1;
+   display: flex;
+   flex-direction: column;
+   gap: 20px;
+}
+
+.team-wrapper .separator {
+   width: 80%;
+   border-top: solid 1px #ffffff;
+}
+
+.team-year {
+   text-align: center;
+   color: var(--text-color);
+   font-size: 30px;
+}
+
 .member-list {
+   flex: 1;
    display: flex;
    flex-wrap: wrap;
    align-items: center;
    justify-content: center;
    gap: 30px;
+   padding: 0;
 }
 
 .member-item {
@@ -186,57 +203,58 @@ section h3 {
 }
 
 .member-infos {
-   z-index:1;
-   position:relative;
-   display:flex;
-   flex-direction:column;
-   gap:15px;
-   justify-content:center;
-   height:100%;
-   width:100%;
-   background-color:rgba(0,0,0,0.5);
-   color:#ffffff;
-   font-size:20px;
-   text-align:center;
-   transform:translateY(100%);
+   z-index: 1;
+   position: relative;
+   display: flex;
+   flex-direction: column;
+   gap: 15px;
+   justify-content: center;
+   height: 100%;
+   width: 100%;
+   background-color: rgba(0, 0, 0, 0.5);
+   color: #ffffff;
+   font-size: 20px;
+   text-align: center;
+   transform: translateY(100%);
    transition: 0.3s ease-in-out;
 }
 
 .member-name {
    z-index: 1;
    margin-bottom: 10px;
+   max-width: 95%;
    font-size: 24px;
-   color: white;
+   color: var(--text-color);
    text-shadow: 2px 2px 8px #000000;
 }
 
-.member-item:hover .member-infos{
-   transform:translateY(0);
+.member-item:hover .member-infos {
+   transform: translateY(0);
 }
 
 .member-desc {
-   max-width: 90%;
+   max-width: 95%;
 }
 
 .tag-wrapper {
    display: flex;
    gap: 10px;
-   color: #ffffff;
+   color: var(--text-color);
 }
 
-.member-tags{
-   display:flex;
-   flex-direction:column;
-   gap:10px;
+.member-tags {
+   display: flex;
+   flex-direction: column;
+   gap: 10px;
 }
 
-.member-item .contact{
-   position:absolute;
-   bottom:10px;
-   display:flex;
-   justify-content:space-evenly;
-   align-items:space-between;
-   width:100%;
+.member-item .contact {
+   position: absolute;
+   bottom: 10px;
+   display: flex;
+   justify-content: space-evenly;
+   align-items: space-between;
+   width: 100%;
 }
 
 .member-item .instagram_Logo img,
@@ -244,8 +262,8 @@ section h3 {
 .member-item .github_Logo img,
 .member-item .portfolio,
 .member-item .mail {
-   cursor:pointer;
-   color:#ffffff;
+   cursor: pointer;
+   color: var(--text-color);
    height: 25px;
    transition: .2s ease-in-out;
 }
@@ -258,32 +276,14 @@ section h3 {
    transform: scale(1.1, 1.1)
 }
 
-.arrow-to-top {
-   z-index: 5;
-   cursor: pointer;
-   position: sticky;
-   bottom: 75px;
-   left: 20px;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   height: 25px;
-   width: 25px;
-   border: solid 1px #ffffff;
-   border-radius: 100%;
-   box-shadow: 0px 0px 1px 1px rgba(0, 0, 0, 0.5);
-   transition: 0.2s;
-}
 
-.arrow-to-top span {
-   font-size: 18px;
-   color: #ffffff;
-}
+@media screen and (max-width:600px) {
+   .search-wrapper {
+      flex-direction: column;
+      gap: 25px;
+   }
 
-.arrow-to-top:hover {
-   background-color: #ffffff;
-}
-
-.arrow-to-top:hover span {
-   color: var(--main-color-background);
+   main {
+      padding: 10px 0;
+   }
 }
